add mobile view

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
                     <a href="#Proposal" class="nav__element">Oferta</a>
                     <a href="#Catering" class="nav__element">Catering</a>
                 </nav>
+                <button class="hamburger hamburger--arrow" type="button">
+                    <span class="hamburger-box">
+                        <span class="hamburger-inner"></span>
+                    </span>
+                </button>
             </header>
             <div class="home__center-elements">
                 <div class="hero">
