change nav style on mobile

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 </p>
             </article>
             <button class="catering__order-button">Wybierz termin</button>
-            <div class="book-order">
+            <div class="booking">
                 <form class="form">
                     <img
                         src="images/close.svg"
